# freedomapi

./: Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: healthcheck.py
tests/: conftest.py  test_healthcheck.py
