[tool.poetry]
name = "freedomapi"
version = "0.1.0"
description = "fastapi micro service that serves processed data from the Heritage Foundation"
authors = ["Daniel Omar Vergara Pérez <daniel.omar.vergara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.4.1"
pytest-xdist = "^1.34.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
